route.tf
#Route table

resource "aws_route_table" "TF-Route" {
  vpc_id = aws_vpc.TF-VPC.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.TF-igw.id
  }

  tags = {
    Name = "TF-Route"
  }
}


#Route table with subnet association

resource "aws_route_table_association" "TF-Route-subnet" {
  subnet_id      = aws_subnet.TF-Subnet.id
  route_table_id = aws_route_table.TF-Route.id
}
